Updating to 1.4.5 release.

--- a/applications/Makefile
+++ b/applications/Makefile
@@ -5,6 +5,7 @@
 # To set MTK flags (csh: source Mtk_c_env.csh or bash: . Mtk_c_env.sh)
 
 CFLAGS	?= $(MTK_CFLAGS)	# Add you own CFLAGS here
+CXXFLAGS ?= $(MTK_CXXFLAGS)	# Add you own CXXFLAGS here
 LDFLAGS ?= $(MTK_LDFLAGS)	# Add your own LDFLAGS here
 INSTALL :=      /usr/bin/install
 INSTALLDIR ?= $(shell printenv MTK_INSTALLDIR)
@@ -14,7 +15,12 @@ APPS	:= MtkSurfaceBRFRegression \
 	   MtkL2ASCloudMaskReproject \
 	   MtkResampleGeom
 
-all: $(APPS)
+OBJ := $(patsubst %, %.o, $(APPS))
+
+all: $(OBJ) $(APPS)
+
+%: %.o
+	$(CC) $(CFLAGS) $< -o $@ $(LDFLAGS)
 
 clean:
 	@rm -f $(APPS) *.o
